--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -256,9 +256,6 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
-  .mb-5 {
-    margin-bottom: calc(var(--spacing) * 5);
-  }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
@@ -306,9 +303,6 @@
   .h-2 {
     height: calc(var(--spacing) * 2);
   }
-  .h-2\.5 {
-    height: calc(var(--spacing) * 2.5);
-  }
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
@@ -329,9 +323,6 @@
   }
   .w-2 {
     width: calc(var(--spacing) * 2);
-  }
-  .w-2\.5 {
-    width: calc(var(--spacing) * 2.5);
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
@@ -708,6 +699,9 @@
   .text-\[17px\] {
     font-size: 17px;
   }
+  .text-\[18px\] {
+    font-size: 18px;
+  }
   .text-\[20px\] {
     font-size: 20px;
   }
@@ -990,11 +984,6 @@
   .lg\:mt-1 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 1);
-    }
-  }
-  .lg\:mt-2 {
-    @media (width >= 64rem) {
-      margin-top: calc(var(--spacing) * 2);
     }
   }
   .lg\:mt-3 {
